--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -23,6 +23,11 @@
   text-decoration: none;
 }
 
+.colorSP {
+  color: #666666;
+  text-decoration: none;
+}
+
 .attendWrapper {
   margin-top: 100px;
   margin-bottom: 50px;
